# AI-Embedded-Diagnostic-System

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Readme.md  docker-compose.yml  requirements.txt  telemetry.db
.github/workflows/: ci.yml
backend/: main.py
backend/ai/: anomaly_detector.py  diagnostic_engine.py  health_classifier.py  recommendation_engine.py
backend/ai_engine/: feature_extractor.py  health_analyzer.py  health_score.py  inference.py  recommendation_engine.py
backend/core/: config.py
backend/database/: db.py
backend/models/: device_model.py  telemetry_db_model.py  telemetry_model.py
backend/mqtt/: mqtt_client.py
backend/routes/: ai_routes.py  device.py  device_routes.py  history_routes.py  telemetry.py  websocket.py
backend/schemas/: device_status_schema.json  diagnostic_report_schema.json  ota_report_schema.json  telemetry_schema.json
backend/services/: device_registry.py  websocket_manager.py
backend/simulator/: telemetry_simulator.py
backend/storage/: telemetry_store.py
firmware/: main.c
firmware/communication/mqtt/: mqtt_client.c  mqtt_client.h
firmware/communication/wifi/: wifi_driver.c  wifi_driver.h
firmware/core/: system_manager.c  system_manager.h
firmware/core/ai/: inference_engine.c  inference_engine.h
firmware/core/ai/models/: model_metadata.h  tinyml_runtime.c  tinyml_runtime.h
firmware/core/diagnostics/: diagnostic_engine.c  diagnostic_engine.h
firmware/core/scheduler/: scheduler.c  scheduler.h
firmware/core/security/: security_engine.c  security_engine.h
firmware/core/telemetry/: ota_update.c  ota_update.h  telemetry_engine.c  telemetry_engine.h
firmware/drivers/adc/: adc_driver.c  adc_driver.h  signal_conditioning.c  signal_conditioning.h
firmware/drivers/display/: display_driver.c  display_driver.h
firmware/platform/: platform.c  platform.h
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/: ActivityFeed.jsx  DeviceStatusCard.jsx  FleetDeviceCard.jsx  FleetStatCard.jsx  TelemetryCard.jsx  TelemetryChart.jsx
frontend/src/services/: api.js  websocket.js
infrastructure/grafana/: grafana_dashboard.json
infrastructure/prometheus/: prometheus.yml
tests/backend/: test_backend.py  test_device.py  test_telemetry.py
tests/firmware/: test_signal_conditioning.c
